syntax = "proto3";

option java_multiple_files = true;
option java_package = "wood.mike";
option java_outer_classname = "SimpleMicroService";
option objc_class_prefix = "HLW";

package wood.mike;

service SimpleService {
  rpc sayHi (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}